test/classes/figueroa/BogusDestructors4.good
BogusDestructors4.chpl:2: error: destructors must not have arguments
