test/classes/figueroa/BogusDestructors4.chpl
class C {
  proc deinit (x) {writeln("inside ~C");}
}
